[gd_scene load_steps=9 format=2]

[ext_resource path="res://sitoday.png" type="Texture" id=1]
[ext_resource path="res://MapShader.tres" type="Material" id=2]
[ext_resource path="res://icon.gd" type="Script" id=3]
[ext_resource path="res://480271690e1e0485f71988e273730559.jpg" type="Texture" id=4]
[ext_resource path="res://Ctraditional.png" type="Texture" id=5]
[ext_resource path="res://CherToday.png" type="Texture" id=6]
[ext_resource path="res://sitradtional.png" type="Texture" id=7]
[ext_resource path="res://compass-image.png" type="Texture" id=8]

[node name="Scene" type="Node"]

[node name="mapmanager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="480271690e1e0485f71988e273730559" type="Sprite" parent="mapmanager"]
material = ExtResource( 2 )
position = Vector2( 522.308, 335.207 )
texture = ExtResource( 4 )

[node name="Ctraditional" type="Sprite" parent="."]
position = Vector2( 772.759, 373.847 )
texture = ExtResource( 5 )

[node name="CherToday" type="Sprite" parent="."]
position = Vector2( 553.172, 403.341 )
texture = ExtResource( 6 )

[node name="sitradtional" type="Sprite" parent="."]
position = Vector2( 435.067, 188.346 )
texture = ExtResource( 7 )

[node name="sitoday" type="Sprite" parent="."]
position = Vector2( 431.636, 153.246 )
texture = ExtResource( 1 )

[node name="Cherokee" type="Button" parent="."]
margin_left = 13.4889
margin_top = 535.485
margin_right = 316.489
margin_bottom = 555.485
text = "Cherokee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sioux" type="Button" parent="."]
margin_left = 8.79959
margin_top = 564.013
margin_right = 311.8
margin_bottom = 584.013
text = "Sioux"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="compass-image" type="Sprite" parent="."]
position = Vector2( 950.406, 467.194 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
[connection signal="pressed" from="Cherokee" to="mapmanager" method="_on_Cherokee_pressed"]
[connection signal="pressed" from="Sioux" to="mapmanager" method="_on_Sioux_pressed"]
